tests/paczka1/fuzzy1/93924836.err
Error in line 4: wXtxCoknK A659 2,27
Error in line 2: wXtxCoknK A659 3,6
Error in line 16: jQGK S769 66,1
Error in line 25: wXtxCoknK A771 61,3
Error in line 27: QcboKe7q624 A771 13,3
